--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.31.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-xgboost>=2.0.0
-gdown>=5.0.0
+streamlit
+pandas
+scikit-learn==1.6.1
+xgboost
+gdown
